constraints/general-containerresources-samples-container-must-have-cpu-requests-memory-limits-and-requests-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata: # kpt-merge: /container-must-have-cpu-requests-memory-limits-and-requests
  name: container-must-have-cpu-requests-memory-limits-and-requests
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    limits:
      - memory
    requests:
      - cpu
      - memory
